--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proto:generate": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/proto/generated --ts_proto_opt=esModuleInterop=true,outputServices=grpc-web,outputClientImpl=grpc-web ./src/proto/*.proto"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -46,6 +47,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "ethers": "^5.8.0",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -65,6 +68,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/google-protobuf": "^3.15.12",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -76,6 +80,7 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.8",
     "postcss": "^8.4.47",
+    "ts-proto": "^1.156.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
