--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@improbable-eng/grpc-web": "^0.15.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -80,8 +81,8 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.8",
     "postcss": "^8.4.47",
-    "ts-proto": "^1.156.0",
     "tailwindcss": "^3.4.11",
+    "ts-proto": "^1.156.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
