--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # gRPC-Web Proxy Configuration
-REACT_APP_GRPC_WEB_PROXY_URL=http://localhost:8080
+VITE_GRPC_WEB_PROXY_URL=http://localhost:8083/grpc
 
 # Alternative proxy (if using Node.js proxy instead of Envoy)
-# REACT_APP_GRPC_WEB_PROXY_URL=http://localhost:8081 
+# VITE_GRPC_WEB_PROXY_URL=http://localhost:8081 
