--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.83.0",
+    "@wagmi/core": "^2.18.0",
+    "@web3modal/wagmi": "^5.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -49,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "viem": "^2.33.0",
+    "wagmi": "^2.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
