--- a/envoy.yaml
+++ b/envoy.yaml
@@ -25,7 +25,7 @@ static_resources:
                         allow_origin_string_match:
                           - prefix: "*"
                         allow_methods: "GET, POST, OPTIONS"
-                        allow_headers: "content-type,x-grpc-web"
+                        allow_headers: "content-type,x-grpc-web,authorization"
                         max_age: "1728000"
                         expose_headers: "grpc-status,grpc-message"
                       routes:
@@ -48,13 +48,41 @@ static_resources:
                                 value: "GET, POST, OPTIONS"
                             - header:
                                 key: "Access-Control-Allow-Headers"
+                                value: "content-type,x-grpc-web,authorization"
+                            - header:
+                                key: "Access-Control-Max-Age"
+                                value: "1728000"
+                        # Handle OPTIONS preflight for ArborterService
+                        - match:
+                            prefix: "/xyz.aspens.arborter.v1.ArborterService/"
+                            headers:
+                              - name: ":method"
+                                exact_match: "OPTIONS"
+                          direct_response:
+                            status: 204
+                            body:
+                              inline_string: ""
+                          response_headers_to_add:
+                            - header:
+                                key: "Access-Control-Allow-Origin"
                                 value: "*"
+                            - header:
+                                key: "Access-Control-Allow-Methods"
+                                value: "GET, POST, OPTIONS"
+                            - header:
+                                key: "Access-Control-Allow-Headers"
+                                value: "content-type,x-grpc-web,authorization"
                             - header:
                                 key: "Access-Control-Max-Age"
                                 value: "1728000"
                         # Route all /xyz.aspens.arborter_config.v1.ConfigService/ requests to backend
                         - match:
                             prefix: "/xyz.aspens.arborter_config.v1.ConfigService/"
+                          route:
+                            cluster: backend_grpc_service
+                        # Route all /xyz.aspens.arborter.v1.ArborterService/ requests to backend
+                        - match:
+                            prefix: "/xyz.aspens.arborter.v1.ArborterService/"
                           route:
                             cluster: backend_grpc_service
                         # Catch-all route (optional, for other gRPC services)
