--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grpc-web": "^1.5.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "protobufjs": "^7.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
