--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,16 +29,18 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Build, tag, and push image to Amazon ECR
+    - name: Build Docker image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
       run: |
-        # Build a docker container and push it to ECR
-        docker buildx build --platform linux/amd64 -t $ECR_REPOSITORY:${{ github.sha }} .
+        # Build a docker container
+        docker build -t $ECR_REPOSITORY:${{ github.sha }} .
         
-        # Push the images
+    - name: Push Docker image to ECR
+      env:
+        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      run: |
+        # Push the image to ECR
         docker push $ECR_REPOSITORY:${{ github.sha }}
         
         echo "image=$ECR_REPOSITORY:${{ github.sha }}" >> $GITHUB_OUTPUT 
