--- a/envoy.yaml
+++ b/envoy.yaml
@@ -2,7 +2,7 @@ static_resources:
   listeners:
     - address:
         socket_address:
-          address: 0.0.0.0
+          address: demo.aspens.xyz 
           port_value: 8811
       filter_chains:
         - filters:
@@ -117,6 +117,6 @@ static_resources:
               - endpoint:
                   address:
                     socket_address:
-                      address: 192.168.50.253
+                      address: 0.0.0.0
                       #address: host.docker.internal
                       port_value: 50051
