--- a/nginx.conf
+++ b/nginx.conf
@@ -49,10 +49,10 @@ http {
     # HTTPS server
     server {
         listen 443 ssl;
-        server_name yourdomain.com www.yourdomain.com;
+        server_name demo.aspens.xyz;
 
-        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/demo.aspens.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/demo.aspens.xyz/privkey.pem;
 
         # SSL configuration
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -66,6 +66,15 @@ http {
 
         # Security: Hide nginx version
         server_tokens off;
+
+        # Proxy gRPC requests
+        location /api/ {
+            proxy_pass http://0.0.0.0:8811/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         # Handle client-side routing
         location / {
@@ -84,15 +93,6 @@ http {
             expires 1h;
             add_header Cache-Control "public, must-revalidate";
         }
-
-        # API proxy (if needed)
-        # location /api/ {
-        #     proxy_pass http://backend:8080/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
 
         # Health check endpoint
         location /health {
@@ -119,7 +119,7 @@ http {
     # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name yourdomain.com www.yourdomain.com;
+        server_name demo.aspens.xyz;
         return 301 https://$host$request_uri;
     }
 } 
