--- a/nginx.conf
+++ b/nginx.conf
@@ -69,11 +69,22 @@ http {
 
         # Proxy gRPC requests
         location /api/ {
-            proxy_pass http://0.0.0.0:8811/;
+            # Use the Envoy container name or service name
+            proxy_pass http://envoy:8811/;
+
+            # Required for gRPC-Web
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Optional timeouts
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
         }
 
         # Handle client-side routing
