huge rewrite, finally types are getting better

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # gRPC-Web Proxy Configuration
-VITE_GRPC_WEB_PROXY_URL=http://localhost:8811
+VITE_GRPC_WEB_PROXY_URL=/api
 
 # Alternative proxy (if using Node.js proxy instead of Envoy)
 # VITE_GRPC_WEB_PROXY_URL=http://localhost:8081 
