--- a/package.json
+++ b/package.json
@@ -16,28 +16,27 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
-
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@tanstack/react-query": "^5.83.0",
-    "@wagmi/core": "^2.18.0",
-    "@web3modal/wagmi": "^5.1.11",
+    "@reown/appkit-adapter-wagmi": "^1.7.20",
+    "@reown/appkit-core": "^1.7.20",
+    "@reown/appkit-ui": "^1.7.20",
+    "@tanstack/react-query": "^5.85.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-
-
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.6",
-
+    "qr": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.33.0",
-    "wagmi": "^2.16.0"
+    "wagmi": "^2.16.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
