--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prebuild": "node scripts/update-docs.js",
+    "update-docs": "node scripts/update-docs.js",
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
