--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,7 +7,7 @@ on:
     branches: [main, master]
 
 env:
-  IMAGE_NAE: aspens/tradeglance
+  IMAGE_NAME: aspens/tradeglance
   AWS_REGION: us-east-2
   ECR_REPOSITORY: public.ecr.aws/v4f6x5y1/aspens-xyz/tradeglance
 
