--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Configure AWS credentials
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -33,18 +34,29 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Login to Public ECR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/v4f6x5y1
 
       - name: Pull latest image for caching
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest || true
 
-      - name: Build and push Docker image
+      - name: Build Docker image (PR)
+        if: github.event_name == 'pull_request'
+        run: |
+          docker build -f Dockerfile \
+            -t tradeglance:${{ github.sha }} \
+            .
+
+      - name: Build Docker image (Main)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker build -f Dockerfile \
             --cache-from ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest \
@@ -55,11 +67,13 @@ jobs:
             .
 
       - name: Push to AWS ECR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest
 
       - name: Push to Public ECR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker push ${{ env.PUBLIC_ECR_REGISTRY }}:${{ github.sha }}
           docker push ${{ env.PUBLIC_ECR_REGISTRY }}:latest
