fix(version): include git sha as version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         if: github.event_name == 'pull_request'
         run: |
           docker build -f Dockerfile \
+            --build-arg VITE_GIT_COMMIT_HASH=${{ github.sha }} \
             -t tradeglance:${{ github.sha }} \
             .
 
@@ -57,6 +58,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           docker build -f Dockerfile \
+            --build-arg VITE_GIT_COMMIT_HASH=${{ github.sha }} \
             --cache-from ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest \
             -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest \
