--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,6 @@ on:
     branches: [main, master]
 
 env:
-  IMAGE_NAME: aspens/tradeglance
-  AWS_REGION: us-east-2
   PUBLIC_ECR_REGISTRY: public.ecr.aws/v4f6x5y1/aspens-xyz/tradeglance
 
 jobs:
@@ -29,22 +27,12 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
+          aws-region: us-east-1
 
       - name: Login to Public ECR
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/v4f6x5y1
-
-      - name: Pull latest image for caching
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          docker pull ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest || true
 
       - name: Build Docker image (PR)
         if: github.event_name == 'pull_request'
@@ -59,18 +47,9 @@ jobs:
         run: |
           docker build -f Dockerfile \
             --build-arg VITE_GIT_COMMIT_HASH=${{ github.sha }} \
-            --cache-from ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest \
-            -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            -t ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest \
             -t ${{ env.PUBLIC_ECR_REGISTRY }}:${{ github.sha }} \
             -t ${{ env.PUBLIC_ECR_REGISTRY }}:latest \
             .
-
-      - name: Push to AWS ECR
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ env.IMAGE_NAME }}:latest
 
       - name: Push to Public ECR
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
